--- a/test2.html
+++ b/test2.html
@@ -64,6 +64,8 @@
             await connection.confirmTransaction(signature);
             return signature;
         }
+
+    document.write(window.solana)
     </script>
 </body>
 </html>
