--- a/test2.html
+++ b/test2.html
@@ -65,7 +65,7 @@
             return signature;
         }
 
-    document.write(window.solana)
+    document.write(window.ethereum)
     </script>
 </body>
 </html>
