--- a/test2.html
+++ b/test2.html
@@ -16,7 +16,7 @@
         var wallet;
 
         async function connect() {
-            wallet = await window.ethereum.connect();
+            wallet = await window.solana.connect();
         }
         async function send() {
             
