--- a/index.html
+++ b/index.html
@@ -20,21 +20,48 @@
                 filter: brightness(0.5);
             }
             .glass {
+                margin-top: 300px;
+                margin-left: 500px;
                 width: 200px;
                 height: 200px;
-                box-shadow: inset 0 0 100px rgba(255, 255, 255, 0.5);
+                box-shadow: inset 0 0 300px rgba(255, 255, 255, 0.7);
                 border-radius: 30px;
                 border: 1px solid rgba(255, 255, 255, 0.5);
-                position: absolute;
-                top: 50%;
-                left: 50%;
+                position: fixed;
+                backdrop-filter: blur(1px);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-family: Arial, sans-serif;
             }
         </style>
     </head>
     <body>
-        <div class="glass">
-            <h1>Welcom</h1> 
-        </div>
         <div class="background-image"></div>
+
+        <div class="glass" style="top: 10px; left: 10px;">
+            <h1>Welcome</h1> 
+        </div>
+        <div class="glass" style="top: 10px; left: 220px;">
+            <h1>To</h1>
+        </div>
+        <div class="glass" style="top: 10px; left: 430px;">
+            <h1>My</h1>
+        </div>
+        <div class="glass" style="top: 10px; left: 640px;">
+            <h1>Website</h1>
+        </div>
+        <div class="glass" style="top: 220px; left: 10px;">
+            <h1>Enjoy</h1>
+        </div>
+        <div class="glass" style="top: 220px; left: 220px;">
+            <h1>Your</h1>
+        </div>
+        <div class="glass" style="top: 220px; left: 430px;">
+            <h1>Stay</h1>
+        </div>
+        <div class="glass" style="top: 220px; left: 640px;">
+            <h1>Here</h1>
+        </div>
     </body>
 </html>
