--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+            <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
         <style>
             body {
                 margin: 0;
                 padding: 0;
                 overflow: hidden;
+                height: 1000px;
+                overflow-x: auto;
             }
 
             .background-image {
@@ -20,48 +23,33 @@
                 filter: brightness(0.5);
             }
             .glass {
-                margin-top: 300px;
-                margin-left: 500px;
-                width: 200px;
-                height: 200px;
                 box-shadow: inset 0 0 300px rgba(255, 255, 255, 0.7);
                 border-radius: 30px;
                 border: 1px solid rgba(255, 255, 255, 0.5);
-                position: fixed;
                 backdrop-filter: blur(1px);
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 font-family: Arial, sans-serif;
             }
         </style>
     </head>
     <body>
         <div class="background-image"></div>
+        <div class="border-2 fixed top-0 w-full h-full grid place-items-center grid-rows-[150px_850px] overflow-auto">
+            <div class="glass h-10 w-[50vw] flex flex-col justify-center p-3">Search...</div>
+            <div class="border-2 h-full w-full grid gap-2 grid-cols-5">
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
+                <div class="glass"></div>
 
-        <div class="glass" style="top: 10px; left: 10px;">
-            <h1>Welcome</h1> 
-        </div>
-        <div class="glass" style="top: 10px; left: 220px;">
-            <h1>To</h1>
-        </div>
-        <div class="glass" style="top: 10px; left: 430px;">
-            <h1>My</h1>
-        </div>
-        <div class="glass" style="top: 10px; left: 640px;">
-            <h1>Website</h1>
-        </div>
-        <div class="glass" style="top: 220px; left: 10px;">
-            <h1>Enjoy</h1>
-        </div>
-        <div class="glass" style="top: 220px; left: 220px;">
-            <h1>Your</h1>
-        </div>
-        <div class="glass" style="top: 220px; left: 430px;">
-            <h1>Stay</h1>
-        </div>
-        <div class="glass" style="top: 220px; left: 640px;">
-            <h1>Here</h1>
+            </div>
         </div>
     </body>
 </html>
